# CPP-Websocket-Server

./: .gitignore  CMakeLists.txt  Makefile  README.md  websocket  ws.html
docs/: README.md
src/: EventLoop.cpp  EventLoop.hpp  Handler.hpp  Http.cpp  Http.hpp  HttpServer.cpp  HttpServer.h  Main.cpp  Main.hpp  Makefile  Misc.cpp  Misc.h  Utils.hpp  WebSocket.cpp  WebSocket.h  WebSocket.hpp  WebSocketConnection.cpp  WebSocketConnection.hpp  WebSocketEvents.cpp  WebSocketEvents.hpp  WebSocketFrame.cpp  WebSocketFrame.h  WebSocketFrame.hpp  main.cpp  main.h  main.hpp  websocket
src/old/: Sha1.cpp  Sha1.hpp
test/: Makefile  index.js  main.test.cpp  websocket-tests
